--- a/asp_presentacion/Pages/Index.cshtml
+++ b/asp_presentacion/Pages/Index.cshtml
@@ -6,8 +6,8 @@
 @if (!Model.EstaLogueado)
 {
     <div class="container"
-         align="left"
-         style="width:100%">
+    align="left"
+    style="width:100%">
         <h3>
             Login
         </h3>
@@ -19,26 +19,26 @@
                         Usuario:
                     </label>
                     <input onchange="keyUp(this)"
-                           asp-for="@Model.Email"
-                           class="form-control" />
+                    asp-for="@Model.Email"
+                    class="form-control" />
                 </div>
                 <div class="form-group">
                     <label class="control-label">
                         Contrasena:
                     </label>
                     <input type="password"
-                           onchange="keyUp(this)"
-                           asp-for="@Model.Contrasena"
-                           class="form-control" />
+                    onchange="keyUp(this)"
+                    asp-for="@Model.Contra"
+                    class="form-control" />
                 </div>
                 <input type="submit"
-                       value="Limpiar"
-                       asp-page-handler="BtClean"
-                       class="btn btn-default" />
+                value="Limpiar"
+                asp-page-handler="BtClean"
+                class="btn btn-default" />
                 <input type="submit"
-                       value="Entrar"
-                       asp-page-handler="BtEnter"
-                       class="btn btn-default" />
+                value="Entrar"
+                asp-page-handler="BtEnter"
+                class="btn btn-default" />
             </div>
         </form>
         <form method="POST">
@@ -48,27 +48,33 @@
                         Nuevo Usuario:
                     </label>
                     <input onchange="keyUp(this)"
-                           asp-for="@Model.Email2"
-                           class="form-control" />
+                    asp-for="@Model.Email2"
+                    class="form-control" />
                 </div>
                 <div class="form-group">
                     <label class="control-label">
                         Nueva Contraseña:
                     </label>
                     <input type="password"
-                           onchange="keyUp(this)"
-                           asp-for="@Model.Contrasena2"
-                           class="form-control" />
+                    onchange="keyUp(this)"
+                    asp-for="@Model.Contra2"
+                    class="form-control" />
                 </div>
                 <input type="submit"
-                       value="Limpiar"
-                       asp-page-handler="BtClean2"
-                       class="btn btn-default" />
+                value="Limpiar"
+                asp-page-handler="BtClean2"
+                class="btn btn-default" />
                 <input type="submit"
-                       value="Registrarse"
-                       asp-page-handler="BtEnter2"
-                       class="btn btn-default" />
+                value="Registrarse"
+                asp-page-handler="BtEnter2"
+                class="btn btn-default" />
             </div>
+            @if (IndexModel.Registrado)
+            {
+                <h3>
+                    Registro Realizado Corretamente
+                </h3>
+            }
         </form>
     </div>
 }
