--- a/asp_presentacion/Pages/Ventanas/Facturas.cshtml
+++ b/asp_presentacion/Pages/Ventanas/Facturas.cshtml
@@ -211,6 +211,12 @@
                                             asp-route-data="@elemento.Id" />
                                         </td>
                                     }
+                                    <td>
+                                        <input type="submit"
+                                               value="Imprimir"
+                                               asp-page-handler="BtImprimir"
+                                               class="btn btn-secondary"
+                                               asp-route-data="@elemento.Id" />
                                     else
                                     {
                                         <th>
