--- a/asp_presentacion/Pages/Shared/_Layout.cshtml
+++ b/asp_presentacion/Pages/Shared/_Layout.cshtml
@@ -103,6 +103,13 @@
                                     Usuarios
                                 </a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark"
+                                   asp-area=""
+                                   asp-page="/Ventanas/Auditorias">
+                                    Auditorias
+                                </a>
+                            </li>
                         }
                     </ul>
                 </div>
